--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "random-english-words": "^0.1.0",
     "socket.io": "^2.3.0"
   }
 }
